--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,29 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "favicon_128.png",
+      "src": "logo192.png",
       "type": "image/png",
-      "sizes": "128x128"
+      "sizes": "192x192"
     },
     {
-      "src": "favicon_144.png",
-      "type": "image/png",
-      "sizes": "144x144"
-    },
-    {
-      "src": "favicon_512.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
-    },
-    {
-      "src": "icon_192_maskable.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#30193c"
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
