--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.6",
+    "react-contexify": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
