--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-contexify": "^6.0.0",
